# stepcost

./: .gitignore  LICENSE  README.md  SPEC.md  action.yml
.github/workflows/: ci.yml  pages.yml
docs/: INTEGRATIONS.md
sdk/python/: README.md  pyproject.toml
sdk/python/examples/: quickstart.py
sdk/python/scripts/: bench_overhead.py  haiku_reconcile.py
sdk/python/stepcost/: __init__.py  cli.py  client.py  context.py  diff.py  errors.py  models.py  pricing.py  reconcile_gate.py  report.py  report_html.py  rollups.py  runtime.py  sync.py  waste.py
sdk/python/stepcost/data/: price_table.json
sdk/python/stepcost/extractors/: __init__.py  anthropic.py  openai.py
sdk/python/stepcost/integrations/: __init__.py  anthropic.py  langchain.py  litellm.py  openai.py
sdk/python/stepcost/sinks/: __init__.py  base.py  sqlite.py  stdout.py
sdk/python/tests/: test_client.py  test_client_wrappers.py  test_diff_and_html.py  test_extractors.py  test_langchain_integration.py  test_pricing.py  test_reconcile_gate.py  test_regressions.py  test_sync.py  test_viewer.py
site/: index.html
site/docs/: cli.html  concepts.html  cost-as-code.html  docs.css  index.html  integrations.html  quickstart.html
