[project]
name = "stepcost"
version = "0.3.1"
description = "FinOps for LLM agents — unit economics and cost accountability in the developer workflow"
requires-python = ">=3.11"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Kevin Brunette", email = "kevin.brunette@gmail.com" }]
keywords = ["llm", "finops", "cost", "agents", "observability", "tokens"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "pydantic>=2.7",
]

[project.urls]
Homepage = "https://github.com/bronette/stepcost"
Repository = "https://github.com/bronette/stepcost"
Documentation = "https://github.com/bronette/stepcost/blob/main/README.md"
Issues = "https://github.com/bronette/stepcost/issues"

[project.scripts]
stepcost = "stepcost.cli:main"

[project.optional-dependencies]
langchain = [
    "langchain-core>=0.3",
]
dev = [
    "pytest>=8.0",
    "ruff>=0.4",
    "langchain-core>=0.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["stepcost"]

[tool.hatch.build.targets.wheel.force-include]
"stepcost/data/price_table.json" = "stepcost/data/price_table.json"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]
